--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <postgres.version>42.7.1</postgres.version>
         <junit-jupiter-api.version>5.10.1</junit-jupiter-api.version>
         <mockito-core.version>5.9.0</mockito-core.version>
+        <liquibase-core.version>4.26.0</liquibase-core.version>
 
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
@@ -46,6 +47,12 @@
             <artifactId>mockito-core</artifactId>
             <version>${mockito-core.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>${liquibase-core.version}</version>
         </dependency>
 
     </dependencies>
